--- a/track.css
+++ b/track.css
@@ -1,3 +1,27 @@
 #map {
   min-height: 55vh;
 }
+
+.gmap{
+  margin: auto;
+  width: 50%;
+  padding: 15px;
+}
+
+.start{
+  margin: auto;
+  width: 50%;
+  padding: 15px;}
+
+	body ,html { 
+  /* The image used */
+  background-image: url("download2.gif");
+
+  /* Full height */
+  height: 100%; 
+  padding-top:200px
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
