--- a/track.css
+++ b/track.css
@@ -15,7 +15,7 @@
 
 	body ,html { 
   /* The image used */
-  background-image: url("download2.gif");
+  background-image: url("download2.jpg");
 
   /* Full height */
   height: 100%; 
